src/index.css
/* ... */
body {
  overflow-x: hidden;
  background-color: var(--bg-clr);
  /* min-width: 375px; */
}

#root {
  position: relative;
}

/* Burger Menu */
.burger-menu {
  display: none;
  width: 40px;
  height: 40px;
  border: 0;
  background: url(/src/images/shared/icon-hamburger.svg) no-repeat center;
  margin-right: 25px;
}

/* ----- Background ----- */

.landing-bg {
  background-color: var(--bg-clr);
  background: no-repeat url('./images/home/background-home-desktop.jpg') center/cover;
  position: absolute;
  min-height: 100vh;
  top: 0;
  left: 0;
  right: 0;
  display: grid;
  place-items: center;
}

.destination-bg {
  background-image: url('./images/destination/background-destination-desktop.jpg');
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
}

.crew-bg {
  background: url('./images/crew/background-crew-desktop.jpg') center/cover no-repeat;
  position: absolute;
  inset: 0;
  padding-top: 8rem;
  min-height: 100vh;
}

.technology-bg {
  background: url('./images/technology/background-technology-desktop.jpg') center/cover no-repeat;
  position: absolute;
  top: 0;
  min-height: 100vh;
}

/* FONTS */
.heading-4 {
  font-size: var(--fs-head-4);
  text-transform: uppercase;
  opacity: 0.5;
  color: var(--clr-secondary);
}
.heading-3 {
  font-size: var(--fs-head-3);
  color: var(--clr-secondary);
  text-transform: uppercase;
}
.section-title {
  opacity: 0.25;
  font-weight: bold;
  color: var(--clr-secondary);
  padding-right: 1rem;
}
.body-text {
  font-size: var(--fs-text);
  color: var(--clr-primary);
  line-height: 1.8;
}
.selected {
  border-bottom: 3px solid var(--clr-secondary);
  pointer-events: none;
}

/* ----- Navigation ----- */
.nav {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  padding-top: 2rem;
  display: flex;
  align-items: center;
  justify-content: space-between;
  z-index: 9999;
}
.logo {
  margin-left: 3rem;
  flex-shrink: 0;
  flex-basis: 10%;
}
.line {
  border-bottom: 1px solid grey;
  flex: 1;
  position: relative;
  left: 45px;
  z-index: 2;
}
.nav-lists {
  display: flex;
  flex: 1.3;
  gap: 2.5rem;
  background: rgba(255, 255, 255, 0.04);
  backdrop-filter: blur(40.7742px);
  letter-spacing: var(--letter-space-nav);
  padding-inline: 5rem;
}
.list-item {
  padding: 1.75rem 0;
}
.list-item:hover {
  cursor: pointer;
  border-bottom: 3px solid hsla(0, 0%, 100%, 0.5);
}
.list-item-number {
  font-weight: bold;
  color: var(--clr-secondary);
  padding-right: 8px;
}
.list-item a {
  color: var(--clr-secondary);
}
/* ----- Navigation Media Queries ----- */
@media (max-width: 768px) { /* TABLET SIZE */
  .logo {
    flex: 1 0;
  }
  .line {
    display: none;
  }
  .nav-lists {
    height: inherit;
    align-items: center;
  }
  .list-item-number {
    display: none;
  }
}

@media(min-width: 700px) and (max-width: 768px) {
  .nav {
    padding-top: 0;
  }
}

@media (max-width: 700px) {
  .burger-menu {
    display: block;
    z-index: 1000;
  }
  .nav-lists {
    display: none; /* for now (there is bug) or maybe it needs to be hide anyway*/
    position: absolute;
    flex-direction: column;
    padding: 5rem 2rem 5rem 4rem;
    top: 0;
    bottom: 0;
    right: 0;
    width: 400px;
    align-items: flex-start;
    transform: translate(100%);
    /* transition: transform ease-out 1ms; */
  }
  .list-item {
    padding: 0 0 0.5rem;
  }
  .list-item-number {
    display: inline-block;
  }
  .menu-open {
    transform: translate(0%);
    /* transition: transform ease-out 1ms; */
  }
}

/* ----- Landing Page Section ----- */
.landing-page {
  display: flex;
  align-items: flex-end;
  justify-content: space-around;
  width: min(90%, 80rem);
  margin-inline: auto;
  padding-inline: 2rem;
  height: 600px;
  flex-wrap: wrap;
  gap: 2rem;
}
.landing-page .left-section {
  flex-basis: 28rem;
}
.sub-heading-5 {
  font-size: var(--fs-head-subhead);
  letter-spacing: var(--letter-space-head-5);
  color: var(--clr-primary);
}
.heading {
  font-size: clamp(5rem, 12vw ,var(--fs-head-1));
  color: var(--clr-secondary);
}
.left-section .body-text {
  font-size: clamp(15px, 5vw, 18px);
}
.btn-explore {
  background: var(--clr-secondary);
  color: black;
  font-size: 2rem;
  position: relative;
  z-index: 1;
  display: inline-grid;
  place-items: center;
  padding: 0 2em;
  border-radius: 50%;
  aspect-ratio: 1;
  text-decoration: none;
}
.btn-explore::after {
  content: '';
  position: absolute;
  z-index: -1;
  width: 100%;
  height: 100%;
  background: hsla(0, 0%, 100%, 0.1);
  border-radius: 50%;
  opacity: 0;
  transition: opacity 500ms linear, transform 750ms ease-in-out;
}
.btn-explore:hover::after {
    opacity: 1;
    transform: scale(1.5);
}

/* ----- Landing Page Media Queries ----- */

@media (max-width: 850px) { /* TABLET SIZE */
  .landing-bg {
    background: no-repeat url('./images/home/background-home-tablet.jpg') center/cover;
  }
  .left-section {
    text-align: center;
  }
  .left-section .sub-heading-5 {
    font-size: 1.25rem;
  }
  .left-section .body-text {
    font-size: 1rem;
  }
}

@media (max-width: 500px) { /* Going MOBILE SIZE */
  .landing-bg {
    background: no-repeat url('./images/home/background-home-mobile.jpg') center/cover;
  }
  .left-section .sub-heading-5 {
    font-size: 1rem;
  }
  .left-section .body-text {
    font-size: 0.9375rem;
  }
  .btn-explore {
    font-size: 1.25rem;
  }
}

@media (min-width: 375px) and (max-height: 665px) {
  .landing-page {
    align-content: center; 
    margin-top: 3rem;
  }
}

/* ----- Destination Section ----- */
.destination {
  display: flex;
  /* flex-wrap: wrap; */
  min-height: 100vh;
  align-items: flex-end;
  justify-content: center;
  gap: 12rem;
  padding-block: 8rem 5rem;
  margin-inline: 3rem;
}
.destination-display {
  display: flex;
  flex-direction: column;
}
.destination-display .sub-heading-5 {
  margin-bottom: 4rem;
  text-transform: uppercase;
  color: var(--clr-secondary);
}
.destination-display img {
  padding-left: 3rem;
}
/* ... */

